--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongoose": "^8.0.2",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
   }
